完成了上传界面与STL预览界面的合并，准备改合并后界面的相关逻辑

--- a/src/upload.html
+++ b/src/upload.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>上传打印</title>
     <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="Less/cloud_printer.css">
-    <link rel="stylesheet" href="Less/upload.css">
-    <link type="image/x-icon" rel="shortcut icon" href="images/favicon.ico">
+    <link rel="stylesheet" href="assets/Less/cloud_printer.css">
+    <link rel="stylesheet" href="assets/Less/upload.css">
+    <link type="image/x-icon" rel="shortcut icon" href="assets/images/favicon.ico">
 
 
     <style>
@@ -125,7 +125,7 @@
 </div>
 
 
-<script src="Jquery/jquery-1.12.4.js"></script>
+<script src="assets/Jquery/jquery-1.12.4.js"></script>
 <script src="bootstrap/bootstrap.min.js"></script>
 <script>
 
