在模型加载里面展示了模型相关信息，接下来在处理模型文件中做逻辑处理，这次进行购物车逻辑重构

--- a/src/printing.html
+++ b/src/printing.html
@@ -345,7 +345,7 @@
         //     arr.push(fi);
 
         //     //文件的大小
-        //     file_size = SIZE;
+        //     file_size = fileSize;
 
 
         //     var $queue = createQueue(arr[num]);
