--- a/src/printing.html
+++ b/src/printing.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -10,7 +11,7 @@
     <link rel="stylesheet" href="assets/Less/cloud_printer.css">
 </head>
 
-<body style="overflow:hidden">
+<body>
     <!-- 头部导航 -->
     <div>
         <nav class="navbar navbar-default c_navbar navbar-static-top" role="navigation">
@@ -48,126 +49,128 @@
         </nav>
     </div>
 
-    <!-- 模型预览与相关信息显示 -->
-    <div class="container-fluid" id="prev">
-        <div class="row">
-            <div class="col-md-7 prev_left clearfix">
-                <div id="canvas3d"></div>
-                <div class="file-box">
-                    <form id="uploadForm">
-                        <input type="file" name="file" class="file" id="fileField" />
-                    </form>
+    <main id="container">
+        <!-- 模型预览与相关信息显示 -->
+        <div class="container-fluid" id="prev">
+            <div class="row">
+                <div class="col-md-7 prev_left clearfix">
+                    <div id="canvas3d"></div>
+                    <div class="file-box">
+                        <form id="uploadForm">
+                            <input type="file" name="file" class="file" id="fileField" />
+                        </form>
+                    </div>
+                </div>
+                <div class="col-md-5 prev_right">
+                    <ul>
+                        <li>
+                            <img src="assets/images/cloud.png" alt="" class="img-responsive">
+                            <span>打印机类型:</span>&nbsp;
+                            <span>Printors i3</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/locate.png" alt="" class="img-responsive">
+                            <span>打印机地点:</span>&nbsp;
+                            <span>昆明理工大学呈贡校区综合性体育运动馆</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/file.png" alt="" class="img-responsive file_png">
+                            <span>文件名:</span>&nbsp;
+                            <span class="fileName">xxx.stl</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/resize-full-alt.png" alt="" class="img-responsive resize_png">
+                            <span>尺寸大小:</span>&nbsp;
+                            <span class="x_size">0mm x </span>
+                            <span class="y_size">0mm x </span>
+                            <span class="z_size">0mm</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/pla.png" alt="" class="img-responsive pla_png">
+                            <span>耗材:</span>&nbsp;
+                            <div class="select">
+                                <select>
+                                    <option>PLA</option>
+                                </select>
+                            </div>
+                            <span class="price"> *0.8元/g</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/size.png" alt="" class="img-responsive size_png">
+                            <span>模型比例:</span>&nbsp;
+                            <div class="pro_bar">
+                                <div class="progress">
+                                    <div class="progress-bar"></div>
+                                </div>
+                                <a class="pro_control" href="javascript:;"></a>
+                                <div id="progress_value">100%</div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="assets/images/type.png" alt="" class="img-responsive type_png">
+                            <span>打印模式:</span>&nbsp;
+                            <div class="pri_type">
+                                <div class="btn-group " role="group" aria-label="...">
+                                    <button type="button" class="btn btn-default selected">快速</button>
+                                    <button type="button" class="btn btn-default">标准</button>
+                                    <button type="button" class="btn btn-default">品质</button>
+                                    <button type="button" class="btn btn-default">自定义</button>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="assets/images/number.png" alt="" class="img-responsive number_png">
+                            <span>数量:</span>&nbsp;
+                            <div class="btn-group number" role="group" aria-label="...">
+                                <span class="down">-</span><span class="num">1</span><span class="add">+</span>
+                            </div>
+                        </li>
+                        <li>
+                            <img src="assets/images/time.png" alt="" class="img-responsive time_png">
+                            <span>预估时间:</span>&nbsp;
+                            <span class="time">2 h 30 min</span>
+                        </li>
+                        <li>
+                            <img src="assets/images/price.png" alt="" class="img-responsive price_png">
+                            <span>总价:</span>&nbsp;
+                            <span class="money">￥0</span>
+                        </li>
+                        <li class="text-center operation">
+                            <button class="btn btn-success btn-sm op_btn op_btn1">上传文件</button>
+                            <button class="btn btn-success btn-sm op_btn op_btn2">加入队列</button>
+                            <button class="btn btn-success btn-sm op_btn op_btn3">立即打印</button>
+                        </li>
+                    </ul>
                 </div>
             </div>
-            <div class="col-md-5 prev_right">
-                <ul>
-                    <li>
-                        <img src="assets/images/cloud.png" alt="" class="img-responsive">
-                        <span>打印机类型:</span>&nbsp;
-                        <span>Printors i3</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/locate.png" alt="" class="img-responsive">
-                        <span>打印机地点:</span>&nbsp;
-                        <span>昆明理工大学呈贡校区综合性体育运动馆</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/file.png" alt="" class="img-responsive file_png">
-                        <span>文件名:</span>&nbsp;
-                        <span class="fileName">xxx.stl</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/resize-full-alt.png" alt="" class="img-responsive resize_png">
-                        <span>尺寸大小:</span>&nbsp;
-                        <span class="x_size">0mm x </span>
-                        <span class="y_size">0mm x </span>
-                        <span class="z_size">0mm</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/pla.png" alt="" class="img-responsive pla_png">
-                        <span>耗材:</span>&nbsp;
-                        <div class="select">
-                            <select>
-                                <option>PLA</option>
-                            </select>
-                        </div>
-                        <span class="price"> *0.8元/g</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/size.png" alt="" class="img-responsive size_png">
-                        <span>模型比例:</span>&nbsp;
-                        <div class="pro_bar">
-                            <div class="progress">
-                                <div class="progress-bar"></div>
-                            </div>
-                            <a class="pro_control" href="javascript:;"></a>
-                            <div id="progress_value">0%</div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/images/type.png" alt="" class="img-responsive type_png">
-                        <span>打印模式:</span>&nbsp;
-                        <div class="pri_type">
-                            <div class="btn-group " role="group" aria-label="...">
-                                <button type="button" class="btn btn-default selected">快速</button>
-                                <button type="button" class="btn btn-default">标准</button>
-                                <button type="button" class="btn btn-default">品质</button>
-                                <button type="button" class="btn btn-default">自定义</button>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/images/number.png" alt="" class="img-responsive number_png">
-                        <span>数量:</span>&nbsp;
-                        <div class="btn-group number" role="group" aria-label="...">
-                            <span class="down">-</span><span class="num">1</span><span class="add">+</span>
-                        </div>
-                    </li>
-                    <li>
-                        <img src="assets/images/time.png" alt="" class="img-responsive time_png">
-                        <span>预估时间:</span>&nbsp;
-                        <span class="time">2 h 30 min</span>
-                    </li>
-                    <li>
-                        <img src="assets/images/price.png" alt="" class="img-responsive price_png">
-                        <span>总价:</span>&nbsp;
-                        <span class="money">￥0</span>
-                    </li>
-                    <li class="text-center operation">
-                        <button class="btn btn-success btn-sm op_btn op_btn1">上传文件</button>
-                        <button class="btn btn-success btn-sm op_btn op_btn2">加入队列</button>
-                        <button class="btn btn-success btn-sm op_btn op_btn3">立即打印</button>
-                    </li>
-                </ul>
-            </div>
         </div>
-    </div>
 
-    <!-- 购物车及底部信息 -->
-    <div class="container-fluid" id="shopCar-wrapper">
-        <div class="panel panel-default">
-            <div class="panel-heading">购物车</div>
-            <div class="panel-body shopping">
-                <table class="table text-center tb_queue">
-                    <tr class="main">
-                        <td>订单文件名</td>
-                        <td>订单编号</td>
-                        <td>模型信息</td>
-                        <td>模型数量</td>
-                        <td>金额</td>
-                        <td>管理</td>
-                    </tr>
-                </table>
-                <div class="text-right">
-                    <span class="sumMoney">￥0</span>
-                    <a class="sumAll btn btn-success" href="#">合计</a>
+        <!-- 购物车及底部信息 -->
+        <div class="container-fluid" id="shopCar-wrapper">
+            <div class="panel panel-default">
+                <div class="panel-heading">购物车</div>
+                <div class="panel-body shopping">
+                    <table class="table text-center tb_queue">
+                        <tr class="main">
+                            <td>订单文件名</td>
+                            <td>订单编号</td>
+                            <td>模型信息</td>
+                            <td>模型数量</td>
+                            <td>金额</td>
+                            <td>管理</td>
+                        </tr>
+                    </table>
+                    <div class="text-right">
+                        <span class="sumMoney">￥0</span>
+                        <a class="sumAll btn btn-success" href="#">合计</a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+    </main>
     <!-- 底部信息部分 -->
     <div class="clearfix">
-        <div class="container-fluid footer">
+        <div class="container-fluid " id="footer">
             <div class="row">
                 <div class="col-lg-2 col-lg-offset-5">
                     <h3 class="h_word">联系我们</h3>
