合并部分css文件，减少http请求数

--- a/src/index.html
+++ b/src/index.html
@@ -4,11 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Document</title>
+    <title>首页</title>
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/Less/nav.css" />
     <link rel="stylesheet" href="./assets/Less/index.css" />
-    <link rel="stylesheet" href="./assets/Less/footer.css" />
   </head>
   <body>
     <nav class="nav-wrapper">
@@ -30,7 +29,7 @@
           <a>
             <li>我的订单</li>
           </a>
-          <a>
+          <a href="./views/about.html">
             <li>关于我们</li>
           </a>
           <a>
