主要为关于我们页增加动画

--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="./bootstrap/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/Less/nav.css" />
     <link rel="stylesheet" href="./assets/Less/index.css" />
+    <link
+      rel="shortcut icon"
+      href="./assets/images/favicon.ico"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <nav class="nav-wrapper">
@@ -47,7 +52,7 @@
           <p>随时随地打印</p>
           <p>分享你的创意、设计与技术</p>
           <p class="bigger">开始你的3D创作</p>
-          <a >注册</a>
+          <a>注册</a>
         </div>
       </section>
       <section class="info-wrapper">
@@ -120,11 +125,29 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 text-center">
-            <img src="./assets/images/wechat.png" alt class="img-responsive center-block f_img">
-            <img src="./assets/images/qq.png" alt class="img-responsive center-block f_img">
-            <img src="./assets/images/weibo.png" alt class="img-responsive center-block f_img">
-            <img src="./assets/images/facebook.png" alt class="img-responsive center-block f_img">
+          <div
+            class="col-lg-4 col-lg-offset-4 col-md-4 col-md-offset-4 text-center"
+          >
+            <img
+              src="./assets/images/wechat.png"
+              alt
+              class="img-responsive center-block f_img"
+            />
+            <img
+              src="./assets/images/qq.png"
+              alt
+              class="img-responsive center-block f_img"
+            />
+            <img
+              src="./assets/images/weibo.png"
+              alt
+              class="img-responsive center-block f_img"
+            />
+            <img
+              src="./assets/images/facebook.png"
+              alt
+              class="img-responsive center-block f_img"
+            />
           </div>
         </div>
         <div class="row">
