增加首页小图标淡入显示

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,7 @@
       href="./assets/images/favicon.ico"
       type="image/x-icon"
     />
+    
   </head>
   <body>
     <nav class="nav-wrapper">
@@ -83,7 +84,13 @@
       <section class="explain-wrapper">
         <p>随时随地打印，拒绝等待</p>
         <div class="img">
-          <img src="./assets/images/city.png" alt srcset />
+          <img src="./assets/images/city.png"/>
+          <span class="locate-icon1"></span>
+          <span class="locate-icon2"></span>
+          <span class="locate-icon3"></span>
+          <span class="locate-icon4"></span>
+          <span class="locate-icon5"></span>
+          <span class="locate-icon6"></span>
         </div>
         <div class="text">
           <p>打印机多点投放</p>
@@ -162,5 +169,6 @@
         </div>
       </div>
     </div>
+    <script src="./assets/js/libs/require.js" data-main="./assets/js/indexAnimate.js" ></script>
   </body>
 </html>
